# bazel-benchmarks

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  generate.js  index.html  package.json  tsconfig.json  webpack.config.js
