package(default_visibility = ["//visibility:public"])
exports_files(["tsconfig.json"])

#load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_nodejs//internal:devmode_js_sources.bzl", "devmode_js_sources")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

# NOTE: this will move to node_modules/BUILD in a later release
filegroup(
    name = "node_modules",
    srcs = glob(["/".join(["node_modules", pkg, "**", ext]) for pkg in [
        "@types",
        "livereload",
        "requirejs",
        "tsickle",
        "tsutils",
        "typescript",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]]),
)

ts_devserver(
    name = "devserver",
    deps = ["//src:app"],
    serving_path = "/bundle.js",
    entry_module = "__main__/src/index",
    static_files = ["index.html"],
    tags = ["ibazel_live_reload"],
)
